--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,7 +1,16 @@
 <div align='center'>
     <h1 class="title is-3 has-text-primary">Nueva Solicitud</h1>
     <div class="column is-4 is-offset-4">
-        <%= form_for @request, as: :request do |form| %>
+        <%= form_with(model: @request, method: :post) do |form| %>
+            <% if @request.errors.any? %>
+            <div>
+                <h1 align='center' class = "title is-4 has-text-black" >Se produjeron los siguientes errores:</h1>
+                <% @request.errors.full_messages.each do |message| %>
+                <h1 align='center' class = "title is-6 has-text-black" ><%= message %></h1>
+                <% end %>
+                <br/>
+            </div>
+            <% end %>
 
             <%= form.hidden_field :turno_id, value: @turno_id %>
             <%= form.text_field :descripcion, {class: "input is-primary is-rounded is-outlined", placeholder:"Agrega aquí la dirección de encuentro"}%>
