--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -1,7 +1,8 @@
 <div align='center'>
 <h1 class="title is-2 has-text-primary">Cuenta</h1>
+<h1 align='center' class = "title is-4 has-text-black" >Aquí se encuentra toda la información de los turnos propios</h1>
 
-<h3>Datos Personales</h3>
+<h1 align='center' class = "title is-5 has-text-black">Datos Personales</h1>
 <p>
     <strong>Nombre:</strong>
     <%= @user.name %>
@@ -32,26 +33,34 @@
         </div>
     </div>
 
-    <% @no_vacio = false %>
+    
     <div class="row">
-        <% @turnos.each do |turno|%>
-            <%if turno.user_id == current_user.id and turno.estado == "ACTIVO"%>
-                <% @no_vacio = true %>
-                <div class="column-turno">
-                    <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
-                    <b>Hora salida </b><p><%= turno.hora_salida%></p>
-                    <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-                    <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
-                    <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-                    <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
-                </div>
+        <div align='center' style="display: flex; flex-flow: wrap;">
+            <% @no_vacio = false %>
+            <% @turnos.each do |turno|%>
+                <%if turno.user_id == current_user.id and turno.estado == "ACTIVO"%>
+                    <% @no_vacio = true %>
+                    <div class="column-turno">
+                        <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
+                        <b>Hora salida </b><p><%= turno.hora_salida%></p>
+                        <b>Día de la semana </b><p><%= turno.dia_semana%></p>
+                        <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
+                        <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
+                        <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                    </div>
+                <% end %>
             <% end %>
-        <% end %>
-        <% if not @no_vacio %>
-            <div align='center' style="display: flex; flex-flow: wrap; ">
-                <h4 class = "title is-4 has-text-dark" >No existen turnos activos publicados</h4>
-            </div>
-        <% end %>
+            <% if not @no_vacio %>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+            <% end %>
+        </div>
     </div>
 
     <div class="column-cuenta">
@@ -60,9 +69,9 @@
         </div>
     </div>
 
-    <% @no_vacio = false %>
     <div class="row">
     <% @turnos.each do |turno|%>
+        <% @no_vacio = false %>
         <%if turno.user_id == current_user.id and turno.estado == "CONFIRMADO"%>
             <div class="column-turno">
                 <% @no_vacio = true %>
@@ -76,9 +85,14 @@
         <% end %>
     <% end %>
     <% if not @no_vacio %>
-        <div align='center' style="display: flex; flex-flow: wrap; ">
-            <h4 class = "title is-4 has-text-dark" >No tiene turnos confirmados</h4>
-        </div>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
     <% end %>
     </div>
 
@@ -88,9 +102,8 @@
         </div>
     </div>
     
-    
-    <% @no_vacio = false %>
     <div class="row">
+        <% @no_vacio = false %>
         <% @turnos.each do |turno|%>
             <%if turno.user_id == current_user.id and turno.estado == "COMPLETADO"%>
                 <% @no_vacio = true %>
@@ -105,10 +118,14 @@
             <% end %>
         <% end %>
         <% if not @no_vacio %>
-            
-            <div align='center' style="display: flex; flex-flow: wrap; ">
-                <h4 class = "title is-4 has-text-dark" >No tiene turnos completados</h4>
-            </div>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
         <% end %>
     </div>
 </div>
