--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,61 +1,145 @@
 <h1 align='center' class = "title is-2 has-text-primary" >Resumen Solicitudes</h1>
+<h1 align='center' class = "title is-4 has-text-black" >Aquí se encuentra toda la información de las solicitudes</h1>
 
-<br/><h3>Solicitudes Recibidas Pendientes</h3><br/>
-<div align='center'style="display: flex; flex-flow: wrap;">
-    <% @requests.each do |request|%>
-        <%if request.turno.user_id == current_user.id and request.estado == "PENDIENTE"%>
-            <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
-            <p>Número Turno: <%= request.turno.id%></p>
-            <p>Id Usuario Turno: <%= request.turno.user_id%></p>
-            <p>Id Usuario Solicitud: <%= request.user_id%></p>
-            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
-            <%= link_to 'Responder', requests_edit_path(:id => request.id)%>
-        <% end %>
+<div class="row">
+
+    <div class="column">
+        <div align='left' style="display: flex; flex-flow: wrap; ">
+            <h3 class = "title is-4 has-text-dark" >Solicitudes Recibidas Pendientes</h3>
+        </div>
+        <br/>
+        <div align='center'style="display: flex; flex-flow: wrap;">
+            <% @no_vacio = false %>
+            <div class="row">
+            <% @requests.each do |request|%>
+                <%if request.turno.user_id == current_user.id and request.estado == "PENDIENTE"%>
+                    <div class="column-turno">
+                        <% @no_vacio = true %>
+                        <p>Número Turno: <%= request.turno.id%></p>
+                        <p>Id Usuario Turno: <%= request.turno.user_id%></p>
+                        <p>Id Usuario Solicitud: <%= request.user_id%></p>
+                        <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
+                        <br/>
+                        <%= link_to 'Responder', requests_edit_path(:id => request.id)%>
+                    </div>
+                <% end %>
+            <% end %>
+            <% if not @no_vacio %>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+            <% end %>
+            </div>
+        </div>
+    </div>
+    <br/>
+
+    <div class="column">
+        <div align='left' style="display: flex; flex-flow: wrap; ">
+            <h3 class = "title is-4 has-text-dark" >Solicitudes Recibidas Procesadas</h3>
+        </div>
+        <br/>
+        <div align='center' style="display: flex; flex-flow: wrap;">
+            <% @no_vacio = false %>
+            <div class="row">
+                <% @requests.each do |request|%>
+                    <%if request.turno.user_id == current_user.id and request.estado != "PENDIENTE"%>
+                        <div class="column-turno">
+                            <% @no_vacio = true %>
+                            <p>Número Turno: <%= request.turno.id%></p>
+                            <p>Id Usuario Turno: <%= request.turno.user_id%></p>
+                            <p>Id Usuario Solicitud: <%= request.user_id%></p>
+                            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
+                        </div>
+                    <% end %>
+                <% end %>
+                <% if not @no_vacio %>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                <% end %>
+            </div>
+        </div>
+    </div>
+    <br/>
+
+    <div class="column">
+        <div align='left' style="display: flex; flex-flow: wrap; ">
+            <h3 class = "title is-4 has-text-dark" >Solicitudes Enviadas Pendientes</h3>
+        </div>
+        <br/>
+        <div align='center' style="display: flex; flex-flow: wrap;">
+            <% @no_vacio = false %>
+            <div class="row">
+                <% @requests.each do |request|%>
+                    <%if request.user_id == current_user.id and request.estado == "PENDIENTE"%>
+                        <div class="column-turno">
+                            <% @no_vacio = true %>
+                            <p>Número Turno: <%= request.turno.id%></p>
+                            <p>Id Usuario Turno: <%= request.turno.user_id%></p>
+                            <p>Id Usuario Solicitud: <%= request.user_id%></p>
+                            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
+                            <br/>
+                            <%= link_to 'Editar', requests_edit_path(:id => request.id)%>
+                        </div>
+                    <% end %>
+                <% end %>
+                <% if not @no_vacio %>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                <% end %>
+            </div>
+        </div>
+    </div>
+    <br/>
+
+    <div class="column">
+        <div align='left' style="display: flex; flex-flow: wrap; ">
+            <h3 class = "title is-4 has-text-dark" >Solicitudes Enviadas Procesadas</h3>
+        </div>
+        <br/>
+        <div align='center' style="display: flex; flex-flow: wrap;">
+            <% @no_vacio = false %>
+            <div class="row">
+            <% @requests.each do |request|%>
+                <%if request.user_id == current_user.id and request.estado != "PENDIENTE"%>
+                    <div class="column-turno">
+                        <% @no_vacio = true %>
+                        <p>Número Turno: <%= request.turno.id%></p>
+                        <p>Id Usuario Turno: <%= request.turno.user_id%></p>
+                        <p>Id Usuario Solicitud: <%= request.user_id%></p>
+                        <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
+                    </div>
+                <% end %>
+            <% end %>
+            <% if not @no_vacio %>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+            <% end %>
+            </div>
+        </div>
+    </div>
 </div>
-<% end %>
-<br/>
-
-<br/><h3>Solicitudes Recibidas Procesadas</h3><br/>
-<div align='center' style="display: flex; flex-flow: wrap;">
-    <% @requests.each do |request|%>
-        <%if request.turno.user_id == current_user.id and request.estado != "PENDIENTE"%>
-            <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
-            <p>Número Turno: <%= request.turno.id%></p>
-            <p>Id Usuario Turno: <%= request.turno.user_id%></p>
-            <p>Id Usuario Solicitud: <%= request.user_id%></p>
-            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
-        <% end %>
-</div>
-<% end %>
-<br/>
-
-<br/><h3>Solicitudes Enviadas Pendientes</h3><br/>
-<div align='center' style="display: flex; flex-flow: wrap;">
-    <% @requests.each do |request|%>
-        <%if request.user_id == current_user.id and request.estado == "PENDIENTE"%>
-            <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px; background-color: lightblue;">
-            <p>Número Turno: <%= request.turno.id%></p>
-            <p>Id Usuario Turno: <%= request.turno.user_id%></p>
-            <p>Id Usuario Solicitud: <%= request.user_id%></p>
-            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
-            <%= link_to 'Editar', requests_edit_path(:id => request.id)%>
-        <% end %>
-</div>
-<% end %>
-<br/>
-
-<br/><h3>Solicitudes Enviadas Procesadas</h3><br/>
-<div align='center' style="display: flex; flex-flow: wrap;">
-    <% @requests.each do |request|%>
-        <%if request.user_id == current_user.id and request.estado != "PENDIENTE"%>
-            <div style="border: solid 1px; width: 200px; padding: 10px; align-text: center; margin: 5px;">
-            <p>Número Turno: <%= request.turno.id%></p>
-            <p>Id Usuario Turno: <%= request.turno.user_id%></p>
-            <p>Id Usuario Solicitud: <%= request.user_id%></p>
-            <%= link_to 'Ver detalles', requests_show_path(:id => request.id)%>
-        <% end %>
-</div>
-<% end %>
-<br/>
-
 
