--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -40,22 +40,32 @@
 
     <% if @turno.user_id == current_user.id %>
         <%= button_to "Volver",  users_show_path(id: current_user.id), :id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :get%>
-        <%= link_to 'Editar', turnos_edit_path(:id => @turno.id), :id => "boton_volver", class: "button is-primary is-inverted is-rounded is-outlined"%>
+        <% if @turno.estado != 'COMPLETADO'%>     
+            <%= link_to 'Editar', turnos_edit_path(:id => @turno.id), :id => "boton_volver", class: "button is-primary is-inverted is-rounded is-outlined"%>
+        <% end %>
         <%= button_to "Eliminar", turnos_delete_path(:id => @turno.id), :id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :delete%>
     <% else %>
         <%= button_to "Volver", turnos_index_path,:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined", method: :get%>
-        <%= link_to 'Solicitar', requests_new_path(:id => @turno.id),id: "boton_volver", class: "button is-primary is-inverted is-rounded is-outlined"%>
-        <% if @turno.estado == 'COMPLETADO'%>
+        <% if @turno.estado != 'COMPLETADO'%>   
+            <%= link_to 'Solicitar', requests_new_path(:id => @turno.id),id: "boton_volver", class: "button is-primary is-inverted is-rounded is-outlined"%>
+        <% elsif @turno.estado == 'COMPLETADO'%>
             <%= link_to 'Agregar reseña ', resenas_new_path(:id_viaje => @turno.id), class: "button is-primary is-inverted is-rounded is-outlined"%>
         <% end %>
     <% end %>
 
     <% if @turno.estado == 'COMPLETADO'%>
-        <h3>Reseñas viaje</h3>
-        <% @resenas.each do |resena|%>
-            <% if resena.turno_id == @turno.id%>
-                <li>Nombre Pasajero: <%= resena.user.name%>. Calificación: <%= resena.calificacion%> <%= link_to 'Ver detalles', resenas_show_path(:id => resena.id) %> </li>
+        <br/>
+        <h1 class="title is-2 has-text-primary">Reseñas viaje</h1>
+        <div class="contenedor-resena">    
+            <% @resenas.each do |resena|%>
+                <% if resena.turno_id == @turno.id%>
+                <div class="column-resena">
+                    <b>Nombre Pasajero</b><p><%= resena.user.name%></p>
+                    <b>Calificación </b><p><%= resena.calificacion%></p>
+                    <b></b><p><%= link_to 'Ver detalles', resenas_show_path(:id => resena.id) %></p>
+                </div>
+                <% end %>
             <% end %>
-        <% end %>
+        </div>
     <% end %>
 </div>
