Todos los arreglos de rutas y rspec realizados

--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -3,7 +3,7 @@
 
 <div align='center'>    
     <a>
-    <%= button_to "Nuevo turno", turnos_new_path,:id => "boton_turnos", :class => "button is-primary is-rounded is-outlined is-right", :method => :get %>
+    <%= button_to "Nuevo turno", turnos_path,:id => "boton_turnos", :class => "button is-primary is-rounded is-outlined is-right", :method => :get %>
     </a>
 </div>
 
