--- a/app/views/resenas/show.html.erb
+++ b/app/views/resenas/show.html.erb
@@ -1,5 +1,5 @@
 <div align='center'>
-    <h1 class="title is-2 has-text-primary">Solicitud</h1>
+    <h1 class="title is-2 has-text-primary">Reseña</h1>
 
     <p>
         <strong>Número Turno: </strong>
