--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,44 +1,88 @@
 <h2 class="title is-2 has-text-primary">Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+<div class="column is-4 is-offset-4"> 
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <label class="label">Email</label>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input is-primary is-rounded is-outlined", placeholder:"Mail" %>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <br/>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+
+    <div class="field">
+      <%= f.password_field :password, autocomplete: "new-password", class: "input is-primary is-rounded is-outlined", placeholder:"Contraseña nueva" %>
+      <i align='center'>(Dejar en blanco si no la quiere cambiar)</i><br />
+    </div>
+
+    <div class="field">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input is-primary is-rounded is-outlined", placeholder:"Repita contraseña nueva" %>
+    </div>
+
+    <br/>
+
+    <div class="field">
+      <%= f.password_field :current_password, autocomplete: "current-password", class: "input is-primary is-rounded is-outlined", placeholder:"Contraseña actual" %>
+      <i align='center'>(Necesitamos tu contraseña actual para confirmar los cambios)</i><br />
+    </div>
+    
+    <div class="field">
+      <%= f.text_field :name, class: "input is-primary is-rounded is-outlined", placeholder:"Nombre" %>
+    </div>
+
+    <br/>
+    
+    <div class="field">
+      <%= f.text_field :address, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección" %>
+    </div>
+
+    <br/>
+    
+    <div class="field">
+      <%= f.text_field :description, class: "input is-primary is-rounded is-outlined", placeholder:"Cuentanos un poco sobre tí" %>
+    </div>
+
+    <% def options_for_status
+      [
+      ['Género', nil],
+      ['Masculino','Masculino'],
+      ['Femenino','Femenino'],
+      ['No binario','No binario'],
+      ['Prefiero no decir','Prefiero no decir']
+      ]
+    end %>
+
+    <div>
+      <%= f.select :gender, options_for_status, {}, prompt: 'Select One' %>
+    </div>
+
+    <br/>
+    
+    <div class="field">
+      <%= f.text_field :phone, class: "input is-primary is-rounded is-outlined", placeholder:"Teléfono" %>
+    </div>
+
+    <br/>
+    
+    <div class="actions" align='center'>
+      <%= f.submit "Update", :class => "button is-primary is-inverted is-rounded is-outlined" %>
+    </div>
+
   <% end %>
 
-  <div class="field">
-    <label class="label">Password</label> <i>(leave blank if you don't want to change it)</i><br />
-    <label class="label">Password</label>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+  <br/>
+  
+  <a align='center'>
+    <p>¿Insatisfech@? <%= button_to "Eliminar cuenta", registration_path(resource_name), data: { confirm: "¿Esta segur@?" }, method: :delete, :class => "button is-primary is-inverted is-rounded is-outlined" %></p>
+    
+    <br/>
 
-  <div class="field">
-    <label class="label">Password Confirmation</label>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <label class="label">Current password</label> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-<a align='center'>
-<p>Unhappy? <%= button_to "Cancel my account",:id => "boton_volver", :class => "button is-primary is-inverted is-rounded is-outlined" ,registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-<%= link_to "Back", :back %>
-</a>
+    <div class="actions" align='center'>  
+      <%= link_to "Volver", :back, :class => "button is-primary is-inverted is-rounded is-outlined is-centered" %>
+    </div>
+  </a>
+</div>
